<resources>
    <string name="app_name">SVN_Test</string>
    <string name="ble_not_supported">你的手机不支持BLE</string>
    <string name="error_bluetooth_not_supported">你的手机不支持蓝牙</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="send_btn1">电池阀开关</string>
    <string name="device_id_set">设备ID配置：</string>
    <string name="device">设备ID配置：</string>
    <string name="flow_set">流量配置</string>
    <string name="flow">流量配置：</string>
    <string name="server_set">服务器配置</string>
    <string name="timing_time">冲洗定时设置</string>
    <string name="rinse_interval">冲洗时间间隔设置</string>
    <string name="send_content1">请输入发送内容1</string>
    <string name="send_content2">请输入发送内容2</string>
    <string name="send_content">显示发送命令</string>
    <string name="result_content">显示返回结果</string>
    <string name="ble_list">BLE蓝牙列表</string>
    <string name="bluetooth_address">蓝牙MAC地址：</string>
    <string name="bluetooth_name">蓝牙名称：</string>
    <string name="select">查询</string>
    <string name="operation_device">操作设备</string>
    <string name="battery_valve">电池阀</string>
    <string name="default_text">——</string>
    <string name="battery_valve_state">电池阀状态：</string>
    <string name="device_id">设备ID：</string>
    <string name="server_path">服务器路径：</string>
    <string name="flow_state">当前流量：</string>
    <string name="leak_water_state">漏水状态：</string>
    <string name="tds_value">TDS值：</string>
    <string name="hint_device_id">请输入设备ID</string>
    <string name="hint_flow">请输入流量</string>
    <string name="timing">定时时间：</string>
    <string name="rinse">冲洗时间：</string>
    <string name="interval">间隔时间：</string>
    <string name="domain">域名：</string>
    <string name="path">路径：</string>
    <string name="hint_domain">请输入域名</string>
    <string name="hint_path">请输入路径</string>
    <string name="hint_timing">请输入定时时间</string>
    <string name="hint_rinse">请输入冲洗时间</string>
    <string name="hint_interval">请输入间隔时间</string>
</resources>
